# simple-haskell-project

./: LICENSE  README.md  shp.sh
example projects/bare-bones-project/: bare-bones-project.cabal  flake.nix  hie.yaml
example projects/project-with-no-tests-or-bench/: README.md  flake.nix  hie.yaml  project-with-no-tests-or-bench.cabal
example projects/project-with-tests-and-bench/: .hlint.yaml  cabal.project  flake.nix  hie.yaml  project-with-tests-and-bench.cabal
example projects/project-with-tests-and-bench/bench/: Main.hs
example projects/project-with-tests-and-bench/test/: Spec.hs
